--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.12.10",
     "eslint": "^8.40.0",
@@ -71,6 +70,7 @@
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
     "url-loader": "^4.1.1",
-    "vite": "^5.3.5"
+    "vite": "^5.3.5",
+    "@vitejs/plugin-react": "^1.1.3"
   }
 }
